15066
I noticed the following behaviors about the import  statements "`import java.util.Date`" and "`import java._, util.Date`" (scala 2.8.0.β1):
 - test-A: "`import java.util.Date`" works well
 - test-B: "`import java._, util.Date`" works in a {block}, or when compiled by scalac
 - test-C: but does not work as a single statement in runtime interpreter
     `scala> import java._, util.Date`[[BR]]
     `import java._`[[BR]]
     `import util.Date`[[BR]]
 should make "java.util.Date" available, or, if should not, raise an error

test A:
{code}
$$ scala  # test-A
Welcome to Scala version 2.8.0.Beta1-prerelease (Java ... 1.6.0_16).

scala> import java.util.Date
import java.util.Date       

scala> new Date()
res0: java.util.Date = Sat Feb 27 09:52:22 CET 2010
{code}

test B:
{code}
$$ scala  # test-B
Welcome to Scala version 2.8.0.Beta1-prerelease (Java ... 1.6.0_16).

scala> { import java._, util.Date; new Date() }
res0: java.util.Date = Sat Feb 27 09:52:45 CET 2010
{code}

test C:
{code}
$$ scala  # test-C
Welcome to Scala version 2.8.0.Beta1-prerelease (Java ... 1.6.0_16).

scala> import java._, util.Date
import java._
import util.Date

scala> new Date()
<console>:3: error: Date is not a member of util
import util.Date
       ^
<console>:9: error: not found: type Date
       new Date()
           ^

{code}

Note: the scalac compiler if not affected:
{code}
$$ cat TestImport.scala
import java._, util.Date
object TestImport {
  def main (args: Array[String]) = {
    val d : Date = new Date()
    println(d.getClass+" : "+d)
  }
}
$$ scalac TestImport.scala
$$ scala TestImport
class java.util.Date : Sat Feb 27 09:42:58 CET 2010
{code}
